--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ compiler:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libqt4-dev libqt4-opengl-dev zlib1g-dev
-script: qmake && make
+script: qmake CFLAGS="-Werror" CXXFLAGS="-Werror" && make
