Files added for Android
Runs fine with Qt 5.1 beta on my Galaxy S3. Except for it not having
W,A,S,D keys... :)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ manamobile
 
 # Autosaves
 *.autosave
+
+# Android
+android/local.properties
+android/assets/
+android/bin/
+android/gen/
+android/libs/
