--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,37 +1,37 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest package="org.qtproject.example.manamobile" android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1">
-    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="@string/app_name">
-        <activity android:configChanges="orientation|locale|fontScale|keyboard|keyboardHidden" android:name="org.qtproject.qt5.android.bindings.QtActivity" android:label="@string/app_name">
+<manifest package="org.qtproject.example.manamobile" android:versionCode="1" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0">
+    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:label="@string/app_name">
+        <activity android:name="org.qtproject.qt5.android.bindings.QtActivity" android:configChanges="orientation|locale|fontScale|keyboard|keyboardHidden" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <meta-data android:name="android.app.qt_sources_resource_id" android:resource="@array/qt_sources"/>
-            <meta-data android:value="@string/repository" android:name="android.app.repository"/>
+            <meta-data android:name="android.app.repository" android:value="@string/repository"/>
             <meta-data android:name="android.app.qt_libs_resource_id" android:resource="@array/qt_libs"/>
             <meta-data android:name="android.app.bundled_libs_resource_id" android:resource="@array/bundled_libs"/>
-            <meta-data android:value="manamobile" android:name="android.app.lib_name"/>
+            <meta-data android:name="android.app.lib_name" android:value="manamobile"/>
             <!-- Deploy Qt libs as part of package -->
-            <meta-data android:value="1" android:name="android.app.bundle_local_qt_libs"/>
+            <meta-data android:name="android.app.bundle_local_qt_libs" android:value="1"/>
             <meta-data android:name="android.app.bundled_in_lib_resource_id" android:resource="@array/bundled_in_lib"/>
             <meta-data android:name="android.app.bundled_in_assets_resource_id" android:resource="@array/bundled_in_assets"/>
             <!-- Run with local libs -->
-            <meta-data android:value="1" android:name="android.app.use_local_qt_libs"/>
-            <meta-data android:value="/data/local/tmp/qt/" android:name="android.app.libs_prefix"/>
-            <meta-data android:value="libs/libgnustl_shared.so:plugins/platforms/android/libqtforandroidGL.so:" android:name="android.app.load_local_libs"/>
-            <meta-data android:value="jar/QtAndroid-bundled.jar:" android:name="android.app.load_local_jars"/>
-            <meta-data android:value=":" android:name="android.app.static_init_classes"/>
+            <meta-data android:name="android.app.use_local_qt_libs" android:value="1"/>
+            <meta-data android:name="android.app.libs_prefix" android:value="/data/local/tmp/qt/"/>
+            <meta-data android:name="android.app.load_local_libs" android:value="libs/libgnustl_shared.so:plugins/platforms/android/libqtforandroidGL.so:"/>
+            <meta-data android:name="android.app.load_local_jars" android:value="jar/QtAndroid-bundled.jar:"/>
+            <meta-data android:name="android.app.static_init_classes" android:value=":"/>
             <!--  Messages maps -->
-            <meta-data android:value="@string/ministro_not_found_msg" android:name="android.app.ministro_not_found_msg"/>
-            <meta-data android:value="@string/ministro_needed_msg" android:name="android.app.ministro_needed_msg"/>
-            <meta-data android:value="@string/fatal_error_msg" android:name="android.app.fatal_error_msg"/>
+            <meta-data android:name="android.app.ministro_not_found_msg" android:value="@string/ministro_not_found_msg"/>
+            <meta-data android:name="android.app.ministro_needed_msg" android:value="@string/ministro_needed_msg"/>
+            <meta-data android:name="android.app.fatal_error_msg" android:value="@string/fatal_error_msg"/>
             <!--  Messages maps -->
             <!-- Splash screen -->
             <meta-data android:name="android.app.splash_screen" android:resource="@layout/splash"/>
             <!-- Splash screen -->
         </activity>
     </application>
-    <supports-screens android:normalScreens="true" android:anyDensity="true" android:smallScreens="true" android:largeScreens="true"/>
+    <supports-screens android:largeScreens="true" android:normalScreens="true" android:anyDensity="true" android:smallScreens="true"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
