--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ compiler:
   - gcc
   - clang
 before_install:
+  - yes | sudo add-apt-repository ppa:canonical-qt5-edgers/qt5-proper
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libqt4-dev libqt4-opengl-dev zlib1g-dev
-script: qmake && make
+  - sudo apt-get install -qq zlib1g-dev qtdeclarative5-dev qtbase5-dev qtchooser
+script: qtchooser -run-tool=qmake -qt=qt5 && make
