--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <manifest package="org.sourceoftales.client" android:versionCode="1" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0">
     <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name="org.qtproject.qt5.android.bindings.QtActivity" android:configChanges="orientation|locale|fontScale|keyboard|keyboardHidden" android:label="@string/app_name">
+        <activity android:name="org.qtproject.qt5.android.bindings.QtActivity" android:configChanges="orientation|locale|fontScale|keyboard|keyboardHidden|navigation" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -18,7 +18,7 @@
             <!-- Run with local libs -->
             <meta-data android:name="android.app.use_local_qt_libs" android:value="1"/>
             <meta-data android:name="android.app.libs_prefix" android:value="/data/local/tmp/qt/"/>
-            <meta-data android:name="android.app.load_local_libs" android:value="libs/libgnustl_shared.so:plugins/platforms/android/libqtforandroidGL.so:"/>
+            <meta-data android:name="android.app.load_local_libs" android:value="libs/libgnustl_shared.so:lib/libQt5QuickParticles.so:plugins/platforms/android/libqtforandroidGL.so:"/>
             <meta-data android:name="android.app.load_local_jars" android:value="jar/QtAndroid-bundled.jar:"/>
             <meta-data android:name="android.app.static_init_classes" android:value=":"/>
             <!--  Messages maps -->
