--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ compiler:
 before_install:
   - yes | sudo add-apt-repository ppa:canonical-qt5-edgers/qt5-beta-proper
   - sudo apt-get update -qq
-  - sudo apt-get install -qq zlib1g-dev qtdeclarative5-dev qtbase5-dev qtchooser
+  - sudo apt-get install -qq zlib1g-dev qtdeclarative-opensource-src qtbase-opensource-src qtchooser
 script: qtchooser -run-tool=qmake -qt=qt5 && make
