--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ compiler:
   - gcc
   - clang
 before_install:
-  - yes | sudo add-apt-repository ppa:beineri/ppa-packages
+  - yes | sudo add-apt-repository ppa:ppa:beineri/opt-qt52-beta
   - sudo apt-get update -qq
   - sudo apt-get install -qq zlib1g-dev qt52base qt52declarative
-script: /opt/qt52/bin/qt52-env.sh && qmake && make
+script: source /opt/qt52/bin/qt52-env.sh && qmake && make
