--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ compiler:
   - gcc
   - clang
 before_install:
-  - yes | sudo add-apt-repository ppa:beineri/opt-qt52-beta
+  - yes | sudo add-apt-repository ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install -qq zlib1g-dev qt52base qt52declarative
-script: source /opt/qt52/bin/qt52-env.sh && qmake && make
+  - sudo apt-get install -qq zlib1g-dev qtdeclarative5-dev qtbase5-dev
+script: qmake -qt=qt5 -r && make
